--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ librosa = "^0.10.1"
 nltk = "^3.8.1"
 matplotlib = "^3.7.0"
 accelerate = "^0.25.0"
-transformers = "^4.36.1"
+transformers = "^4.35.0"
+cached-path = "^1.5.0"
 einops = "^0.7.0"
 einops-exts = "^0.0.4"
 scipy = "^1.9.0"
