homepage points to package repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,7 @@ name = "styletts2"
 version = "0.1.0"
 description = "StyleTTS 2: Towards Human-Level Text-to-Speech through Style Diffusion and Adversarial Training with Large Speech Language Models. Original authors: Yinghao Aaron Li, Cong Han, Vinay S. Raghavan, Gavin Mischler, Nima Mesgarani. "
 authors = ["Sidharth Rajaram <rajaram@berkeley.edu>"]
-homepage = "https://github.com/yl4579/StyleTTS2"
-documentation = "https://github.com/yl4579/StyleTTS2"
+homepage = "https://github.com/sidharthrajaram/StyleTTS2"
 repository = "https://github.com/sidharthrajaram/StyleTTS2"
 license = "MIT"
 readme = "README.md"
