--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ matplotlib = "^3.7.0"
 accelerate = "^0.25.0"
 
 huggingface-hub = "^0.18.0"
-transformers = "^4.35.0"
+transformers = "^4.35.0, <4.36.0"
 cached-path = "^1.5.0"
 einops = "^0.7.0"
 einops-exts = "^0.0.4"
