--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "styletts2"
-version = "0.1.2"
+version = "0.1.3"
 description = "StyleTTS 2: Towards Human-Level Text-to-Speech through Style Diffusion and Adversarial Training with Large Speech Language Models. Original authors: Yinghao Aaron Li, Cong Han, Vinay S. Raghavan, Gavin Mischler, Nima Mesgarani. "
 authors = ["Sidharth Rajaram <rajaram@berkeley.edu>"]
 homepage = "https://github.com/sidharthrajaram/StyleTTS2"
@@ -25,15 +25,19 @@ accelerate = "^0.25.0"
 huggingface-hub = "^0.18.0"
 transformers = "^4.35.0, <4.36.0"
 cached-path = "^1.5.0"
+filelock = "^3.12.4, <3.13"
+
 einops = "^0.7.0"
 einops-exts = "^0.0.4"
 scipy = "^1.9.0"
 tqdm = "^4.66.1"
 typing = { version = "*", python = "<3.5" }
 typing-extensions = "^4.9.0"
+
 gruut = "^2.3.4"
 gruut-ipa = "^0.13.0"
 gruut-lang-en = "^2.0.0"
+networkx = "^2.8.8, <3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
