--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "styletts2"
-version = "0.1.6"
+version = "0.1.7"
 description = "StyleTTS 2: Towards Human-Level Text-to-Speech through Style Diffusion and Adversarial Training with Large Speech Language Models. Original authors: Yinghao Aaron Li, Cong Han, Vinay S. Raghavan, Gavin Mischler, Nima Mesgarani. "
 authors = ["Sidharth Rajaram <rajaram@berkeley.edu>"]
 homepage = "https://github.com/sidharthrajaram/StyleTTS2"
@@ -21,11 +21,11 @@ librosa = "^0.10.1"
 nltk = "^3.8.1"
 matplotlib = "^3.7.0"
 accelerate = "^0.25.0"
-langchain = "^0.1.0"
+txtsplit = "^1.0.0"
 
 huggingface-hub = "^0.19.0"
 transformers = "^4.36.0"
-cached-path = "^1.5.1"
+cached-path = "^1.6.0"
 filelock = "^3.12.4, <3.13"
 
 einops = "^0.7.0"
